connect project to database and migrate functions to async/await

--- a/WebApiShop/Properties/launchSettings.json
+++ b/WebApiShop/Properties/launchSettings.json
@@ -30,8 +30,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51312/",
-      "sslPort": 44385
+        "applicationUrl": "https://localhost:44385/",
+        "sslPort": 44385
     }
   }
 }
