--- a/WebApiShop/appsettings.json
+++ b/WebApiShop/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "MyUsersDB": "Data Source=DESKTOP-1VUANBN;Initial Catalog=MyUsersDB;Integrated Security=True;Trust Server Certificate=True"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
